test/style.css
body {
  background-color: white;
  color:#444;
  font: 20px/23px Georgia, "Times New Roman", Times, serif;
  cursor: default;
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none;
}
span {
  white-space:pre-line;
}
p {
  margin-top:0px;
}
#getTextWidth {
   position: absolute;
   visibility: hidden;
   height: auto;
   width: auto;
   white-space: pre; /* Thanks to Herb Caudill comment */
}
/* Menu Style */
.menu {
  margin: 20px 0 0 150px;
}
.menu ul{
  list-style: none;
  margin-bottom: 20px;
}
.menu ul li {
  display: inline-block;
  padding:0px 20px;
}
.menu ul li:hover{
  color:red;
}
/* End of Menu Style */
.page, .adiv, .bdiv, #overlay{
  width:100%;
}
/* #hover span {
  position:absolute;
  white-space: pre;
} */
#content{
  width: 800px;
  position: relative;
	margin-left: 200px;
	margin-right: 200px;
	margin-top: 20px;
}

.adiv, .bdiv, #overlay{
  position:absolute;
  top: 0;
  left: 0;
  padding:0;
}

.page {
  position:inherit;
  display:none;
}
.page.current {
  display:block;
}

.unit{
  /* background-color: #DDD; */
}
span.anchor {
  color:green !important;
}
/* p > span {
  display: inline-block;
} */
/* .adiv p > span.tb:hover, .adiv p > span.unit:hover{
  opacity:0.1;
  transition:opacity, 0.5s;
  transition-delay: .5s;
} */
.active .shared{
  cursor: pointer;
}
.adiv p > span:hover .shared{
  color:orange;
  transition:color, 0.5s;
}
.adiv p > span.hidden{
  opacity:0.05;
  transition:opacity, 0.5s;
}
.adiv{
  z-index: 2;
}
.bdiv {
  z-index:1;
}

/* .bdiv span {
  display:
} */
.bdiv p > span {
  opacity: 0;
}
.adiv p > span {
  opacity: 1;
}
#beforeAnchorA {
  opacity: 0;
}
#overlay {
  opacity:0;
}
/* #overlay {
  top:500px;
  display: flex;
  flex-wrap: wrap-reverse;
  direction: rtl;
  justify-content: flex-end;
}
#beforeAnchor {
flex-direction: row-reverse ;

} */
/*
.bdiv p > span{
  display: none;
  position:fixed;
  right:0;
  margin-top: 0;
  z-index: 1;
  width:800px;
} */

